# vmpk_real

./: .cproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  TODO  configure  configure.debug  distclean  gpl.rtf  setup-mingw.nsi  setup.nsi  updateqm.pri  vmpk.desktop  vmpk.desktop.in  vmpk.pro  vmpk.spec.in
cmake_admin/: CreateManpages.cmake  FindTranslationSupport.cmake  FindWindres.cmake
data/: CMakeLists.txt  gmgsxg.ins  help.html  help_de.html  help_es.html  help_fr.html  help_nl.html  help_ru.html  help_tr.html  hm.html  hm_es.html  txt2ins.awk  vmpk.qrc  vmpk.svgz  vpiano.aps
dbus/: README
man/: CMakeLists.txt  Makefile  vmpk.1  vmpk.xml
mobile/: vmpkn9.pro
mobile/fluidsynth/: config.h  fluidsynth.pro
mobile/fluidsynth/fluidsynth/: version.h
mobile/qtc_packaging/debian_harmattan/: README  changelog  control  copyright  rules
mobile/vmpkui/: ctl.h  keyboardmap.h  keylabel.h  main.cpp  messages.sh  pianokey.cpp  pianokey.h  pianokeyboard.cpp  pianokeyboard.h  preset.h  res.qrc  synthengine.cpp  synthengine.h  vmpkui.pro
mobile/vmpkui/i18n/: vmpkn9.ts  vmpkn9_cs.qm  vmpkn9_cs.ts  vmpkn9_es.qm  vmpkn9_es.ts  vmpkn9_ru.qm  vmpkn9_ru.ts
mobile/vmpkui/qml/: About.qml  BasePage.qml  ColorSelectionDialog.qml  Help.qml  MainPage.qml  Preferences.qml  PreferencesItem.qml  Splash.qml  main.qml
mobile/vmpkui/sf2/: COPYRIGHT
src/: CMakeLists.txt  RtMidi.cpp  about.cpp  about.h  about.ui  classicstyle.cpp  classicstyle.h  constants.h  events.h  extracontrols.cpp  extracontrols.h  extracontrols.ui  instrument.cpp  instrument.h  keyboardmap.cpp  keyboardmap.h  keylabel.cpp  keylabel.h  kmapdialog.cpp  kmapdialog.h  kmapdialog.ui  knob.cpp  knob.h  main.cpp  mididefs.h  midisetup.cpp  midisetup.h  midisetup.ui  net.sourceforge.vmpk.xml  pianodefs.h  pianokey.cpp  pianokey.h  pianokeybd.cpp  pianokeybd.h  pianoscene.cpp  pianoscene.h  preferences.cpp  preferences.h  preferences.ui  rawkeybdapp.cpp  (+17 more)
tests/: bigben.sh  dbus-client.py
translations/: CMakeLists.txt  vmpk_ca.ts  vmpk_cs.ts  vmpk_de.ts  vmpk_es.ts  vmpk_fr.ts  vmpk_nl.ts  vmpk_ru.ts  vmpk_sv.ts  vmpk_tr.ts  vmpk_zh_CN.ts
web/: downloads.shtml  index.es.html  index.es.shtml  index.fr.html  index.fr.shtml  index.html  index.ru.html  index.ru.shtml  index.shtml
web/css/: main.css
web/m/: index.ru.html
web/n9/: index.cs.html  index.es.html  index.html  index.ru.html
